# ImageHat

./: .gitignore  Agfa_DC-504_0_metadata.json  LICENSE  README.md  Requirements.txt  analysis_datasets.ipynb  decision_tree_model.pkl  device_attribution_ml.ipynb  main.py  package-lock.json  pyproject.toml  setup.py  test_imagehat.py
demo/: .cta.json  index.html  package.json  pnpm-lock.yaml  settings.json  vite.config.ts
demo/src/: routeTree.gen.ts
image_hat/: __main__.py  jpeg_marker_information.py  main.py  output_structure.py  output_window.py  output_window_(draft).py  setup.py  tag_support_levels.py  valid_formats.py
image_hat/tests/: test_imagehat.py
imagehat/: __init__.py  __main__.py  constants.py  main.py  metadata_comparison.py  output_structure.py  tag_support_levels.py  valid_formats.py
imagehat/identifiers/: constants.py  eixf_attribute_information.py  exif_attribute_information.py  extensions.py  iptc_attribute_information.py  jpeg_marker_segments.py  jpeg_specific_identifiers.py  output_structure.py  png_identifiers.py  support_levels.py  tag_support_levels.py  valid_formats.py
imagehat/parsers/: __init__.py  base_parser.py  jpeg_parser.py  mp4_parser.py  png_parser.py  webp_parser.py
imagehat/tools/: __init__.py  dict_comparer.py  formats.py  get_json_data.py  get_json_recursive.py  metadata_comparison.py  parse_image.py
imagehat/utils/: metrics.py
imagehat/web/: app.py
tests/: test_imagehat_new.py
visualization/: README.md  index.html  package-lock.json  package.json  preprocess.py  preprocess_unused_tags.py  vite.config.ts
(+18 files in other folders)
