[project]
name = "imagehat"
version = "0.1.0"
description = "A structured metadata extraction tool for EXIF analysis and forensic verification."
readme = "README.md"
authors = [
    { name = "Sindre Sæter", email = "fij016@uib.no"}
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.118.0",
    "python-multipart>=0.0.20",
    "rich>=14.1.0",
    "ruff>=0.9.10",
    "uvicorn>=0.33.0",
]
